src/test/ui/consts/const-eval/ub-nonnull.64bit.be.stderr
error: expected identifier, found `<<`
  --> $DIR/ub-nonnull.rs:2:1
   |
LL | <<<<<<< HEAD
   | ^^ expected identifier

error: aborting due to previous error

